Changes in Security for movie